  * if not in any window, add it to end of front window and select it.
  * if no open window, try to reopen previous document. 
  * if that fails, bring up new untitled document.
  * Fixed typo that broke recording (path to save recording files wasn't correct)
  * Added a build phase to delete the neccessary localizations in Sparkle. .zip shrinks: 1.1M -> 0.6M !
- If you drag a movie to the zeroth position, it should actually move there

TODO:
- indicator that movie is bigger than [TDConfig() maxMovieSize] or [TDConfig() maxMovieDuration].
- indicator that movie has consumed into [TDConfig() diskCushion] space.

- menu commands split, join.
- an upload is not a save. better undo handling of trim across upload.
- deleting a movie should move the actual movie file to the trash. undo should move it back.
- check movie status before querying attributes. 
  if not ready, schedule to recheck when becomes ready?
- ModelMovie error state policy
- Not clear that you are recording.
- Not clear when we finish queuing versus when upload is done.

- playlist management: a playlist is a list of movies.
  - can't cut video segments.
  - splitting movies 
  - joining movies
  - items in playlist are just name and image. Should show more.
- splitter view needs work: grow window, give left pane min size, shrink window. shrinks past min. can't programmatically resize.
- video frame should be centered as window grows and shrinks

- no control over capture format (I want 30fps, not 29.99)
- no switching of preview from window to window
- no support for multiple cameras
- dragging start marker so it drags end marker, then back, doesn't restore end marker
- with multiple movies, can I exceed RAM?
- consider a unit test that verifies that actions and outlets are as expected.
- consider a system test with two computers: 
  Computer 1 runs an animation.
  Computer 2 pointed at computer 1 records it, compares with reference video.